# VelliDB

./: .gitignore  Cargo.toml  LICENSE  README.md
.github/workflows/: build.yml  test.yml
src/: lib.rs
src/db/: config.rs  database.rs  mod.rs  options.rs
src/raft/: core.rs  log.rs  message.rs  mod.rs  node.rs  options.rs  result.rs  rpc.rs
src/storage/: builder.rs  key.rs  mod.rs  options.rs  reader.rs  status.rs  store.rs  test.rs  types.rs  wal.rs
src/util/: error.rs  utils.rs
tests/: proxy.rs  test_proxy.rs  test_raft.rs  test_storage.rs
tests/sample/: config.toml  start.sh  test.rest
tests/sample_config/: config.toml
