[package]
name = "velli_db"
version = "0.1.0"
authors = ["ZingLix <me@zinglix.xyz>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
failure = "0.1.8"
crossbeam-skiplist = "0.0.0"
log = "0.4.11"
fs2 = "0.4.3"
serde = {version = "1.0.115", features = ["derive"]}
serde_json = "1.0.57"