[package]
name = "velli_db"
version = "0.1.0"
authors = ["ZingLix <me@zinglix.xyz>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
failure = "0.1.8"
crossbeam-skiplist = { version = "0.0.0", git = "https://github.com/crossbeam-rs/crossbeam.git" }
log = "0.4.11"
env_logger = "0.6.1"
fs2 = "0.4.3"
serde = {version = "1.0.115", features = ["derive"]}
serde_json = "1.0.57"
tempfile = "3.1.0"
async-std = {version="1.9.0", features = ["attributes"]}
tide = "0.15.0"
surf = "2.1.0"
rand = "0.7.3"
bincode = "1.1.3"

[dev-dependencies]
tempfile = "3.1.0"